--- a/08-github-webhook-taskRuns/04.1_create-api-repo-webhook-run.yaml
+++ b/08-github-webhook-taskRuns/04.1_create-api-repo-webhook-run.yaml
@@ -1,18 +1,18 @@
 apiVersion: tekton.dev/v1alpha1
 kind: TaskRun
 metadata:
-  name: create-ui-repo-webhook-run
+  name: create-api-repo-webhook-run
 spec:
   taskRef:
     name: create-webhook
   inputs:
     params:
     - name: GitHubOrg
-      value: "nikhil-thomas"
+      value: "praveen4g0"
     - name: GitHubUser
-      value: "nikhil-thomas"
+      value: "praveen4g0"
     - name: GitHubRepo
-      value: "vote-ui"
+      value: "vote-api"
     - name: GitHubSecretName
       value: webhook-secret
     - name: GitHubAccessTokenKey
@@ -20,6 +20,6 @@ spec:
     - name: GitHubSecretStringKey
       value: secret
     - name: ExternalDomain
-      value: http://vote-cicd-eventlistener-vote-cicd.apps.nikhil42.devcluster.openshift.com
+      value: http://vote-cicd-eventlistener-vote-cicd.apps.ci-ln-b674rdk-d5d6b.origin-ci-int-aws.dev.rhcloud.com
   timeout: 1000s
   serviceAccount: tekton-triggers-createwebhook
