Add Triggers to pipeline tutorial

--- a/07-github-webhooks/02_webhook-secret.yaml
+++ b/07-github-webhooks/02_webhook-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: webhook-secret
 stringData:
   #https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line#creating-a-token
-  token: 
-  secret: "StringData"
+  token: ""
+  secret: "1234567"
