--- a/06-pipeline-triggers/01-triggers-rbac.yaml
+++ b/06-pipeline-triggers/01-triggers-rbac.yaml
@@ -2,38 +2,35 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: tekton-triggers-role
+  name: tekton-triggers-example-minimal
 rules:
-- apiGroups:
-  - tekton.dev
-  resources:
-  - eventlisteners
-  - triggerbindings
-  - triggertemplates
-  - pipelineresources
-  verbs:
-  - get
-- apiGroups:
-  - tekton.dev
-  resources:
-  - pipelineruns
-  - pipelineresources
-  verbs:
-  - create
+# Permissions for every EventListener deployment to function
+- apiGroups: ["tekton.dev"]
+  resources: ["eventlisteners", "triggerbindings", "triggertemplates", "tasks", "taskruns"]
+  verbs: ["get"]
+- apiGroups: [""]
+  resources: ["configmaps"]
+  verbs: ["get", "list", "watch"]
+# Permissions to create resources in associated TriggerTemplates
+- apiGroups: ["tekton.dev"]
+  resources: ["pipelineruns", "pipelineresources", "taskruns"]
+  verbs: ["create"]
 ---
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: tekton-triggers-sa
+secrets:
+  - name: webhook-secret
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: tekton-triggers-rolebinding
+  name: tekton-triggers-example-binding
 subjects:
 - kind: ServiceAccount
   name: tekton-triggers-sa
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: tekton-triggers-role
+  name: tekton-triggers-example-minimal
